samples/_failures_safe/1761086616_662687_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e12ca603.c: In function ‘main’:
./samples/SAFE/__tmp_e12ca603.c:159:21: error: expected ‘;’ at end of input
  159 |             continue
      |                     ^
      |                     ;
./samples/SAFE/__tmp_e12ca603.c:159:13: error: expected declaration or statement at end of input
  159 |             continue
      |             ^~~~~~~~
./samples/SAFE/__tmp_e12ca603.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e12ca603.c:159:13: error: expected declaration or statement at end of input
